--- a/src/main/resources/assets/beenomey/lang/en_us.json
+++ b/src/main/resources/assets/beenomey/lang/en_us.json
@@ -33,6 +33,7 @@
 	"block.beenomey.water_beehive_block": "Water Beehive",
 	
 	"block.beenomey.apiary_mod_block": "Apiary",
+	"block.beenomey.breeder_block": "Breeder",
 	
 	"creativemodetab.beenomey_tab": "Beenome Y"
 }
