--- a/src/main/resources/assets/beenomey/lang/en_us.json
+++ b/src/main/resources/assets/beenomey/lang/en_us.json
@@ -6,13 +6,13 @@
 	"item.beenomey.wooden_scoop": "Wooden Scoop",
 	
 	"item.beenomey.honeycomb": "Honeycomb",
-	"item.beenomey.ice_honeycomb": "Ice Honeycomb",
-	"item.beenomey.watery_honeycomb": "Watery Honeycomb",
-	"item.beenomey.sand_honeycomb": "Sand oneycomb",
-	"item.beenomey.stone_honeycomb": "Stone Honeycomb",
-	"item.beenomey.nether_honeycomb": "Nether Honeycomb",
-	"item.beenomey.ender_honeycomb": "Ender Honeycomb",
-	"item.beenomey.lava_honeycomb": "Hot Honeycomb",
+	"item.beenomey.frozen_honeycomb": "Frozen Honeycomb",
+	"item.beenomey.ocean_honeycomb": "Ocean Honeycomb",
+	"item.beenomey.desert_honeycomb": "Desert oneycomb",
+	"item.beenomey.rock_honeycomb": "Rock Honeycomb",
+	"item.beenomey.inferno_honeycomb": "Inferno Honeycomb",
+	"item.beenomey.void_honeycomb": "Void Honeycomb",
+	"item.beenomey.magma_honeycomb": "Magma Honeycomb",
 	"item.beenomey.paper_honeycomb": "Paper Honeycomb",
 	"item.beenomey.lapis_honeycomb": "Lapis Honeycomb",
 	"item.beenomey.redstone_honeycomb": "Redstone Honeycomb",
@@ -24,13 +24,13 @@
 	
 	"block.beenomey.oakwood_beehive_block": "Oakwood Beehive",
 	"block.beenomey.birchwood_beehive_block": "Birchwood Beehive",
-	"block.beenomey.sand_beehive_block": "Sand Beehive",
-	"block.beenomey.stone_beehive_block": "Stone Beehive",
+	"block.beenomey.desert_beehive_block": "Desert Beehive",
+	"block.beenomey.rock_beehive_block": "Rock Beehive",
 	"block.beenomey.junglewood_beehive_block": "Junglewood Beehive",
-	"block.beenomey.ice_beehive_block": "Ice Beehive",
-	"block.beenomey.ender_beehive_block": "Ender Beehive",
-	"block.beenomey.nether_beehive_block": "Nether Beehive",
-	"block.beenomey.water_beehive_block": "Water Beehive",
+	"block.beenomey.frozen_beehive_block": "Frozen Beehive",
+	"block.beenomey.void_beehive_block": "Void Beehive",
+	"block.beenomey.inferno_beehive_block": "Inferno Beehive",
+	"block.beenomey.ocean_beehive_block": "Ocean Beehive",
 	
 	"block.beenomey.apiary_mod_block": "Apiary",
 	"block.beenomey.breeder_block": "Breeder",
