--- a/src/main/resources/assets/beenomey/lang/en_us.json
+++ b/src/main/resources/assets/beenomey/lang/en_us.json
@@ -22,6 +22,8 @@
 	"item.beenomey.diamond_honeycomb": "Diamond Honeycomb",
 	"item.beenomey.obsidian_honeycomb": "Obsidian Honeycomb",
 	
+	"item.beenomey.structurecomb": "Structurecomb",
+	
 	"block.beenomey.oakwood_beehive_block": "Oakwood Beehive",
 	"block.beenomey.birchwood_beehive_block": "Birchwood Beehive",
 	"block.beenomey.desert_beehive_block": "Desert Beehive",
