--- a/src/main/resources/assets/beenomey/lang/en_us.json
+++ b/src/main/resources/assets/beenomey/lang/en_us.json
@@ -24,6 +24,8 @@
 	
 	"item.beenomey.structurecomb": "Structurecomb",
 	
+	"item.beenomey.honey_bucket": "Honey Bucket",
+	
 	"block.beenomey.oakwood_beehive_block": "Oakwood Beehive",
 	"block.beenomey.birchwood_beehive_block": "Birchwood Beehive",
 	"block.beenomey.desert_beehive_block": "Desert Beehive",
