--- a/src/main/resources/assets/beenomey/lang/en_us.json
+++ b/src/main/resources/assets/beenomey/lang/en_us.json
@@ -30,7 +30,7 @@
 	"item.beenomey.gold_honeycomb": "Gold Honeycomb",
 	"item.beenomey.copper_honeycomb": "Copper Honeycomb",
 	"item.beenomey.diamond_honeycomb": "Diamond Honeycomb",
-	"item.beenomey.obsidian_honeycomb": "obsidian Honeycomb",
+	"item.beenomey.obsidian_honeycomb": "Obsidian Honeycomb",
 	"item.beenomey.glowstone_honeycomb": "Glowstone Honeycomb",
 	"item.beenomey.blaze_honeycomb": "Blaze Honeycomb",
 	"item.beenomey.emerald_honeycomb": "Emerald Honeycomb",
@@ -43,13 +43,43 @@
 	"item.beenomey.ender_pearl_honeycomb": "Ender Pearl Honeycomb",
 	"item.beenomey.amethyst_honeycomb": "Amethyst Honeycomb",
 
-
-
-	
-	"item.beenomey.honey_bucket": "Honey Bucket",
-	"item.beenomey.inferno_honey_bucket": "Hot Honey Bucket",
-	"item.beenomey.ocean_honey_bucket": "Watery Honey Bucket",
-	"item.beenomey.frozen_honey_bucket": "Icy Honey Bucket",
+	"item.beenomey.empty_honey_cell": "Empty Honey Cell",
+	"item.beenomey.honey_cell": "Honey Cell",
+	"item.beenomey.frozen_honey_cell": "Frozen Honey Cell",
+	"item.beenomey.desert_honey_cell": "Desert oneycomb",
+	"item.beenomey.rock_honey_cell": "Rock Honey Cell",
+	"item.beenomey.inferno_honey_cell": "Inferno Honey Cell",
+	"item.beenomey.void_honey_cell": "Void Honey Cell",
+	"item.beenomey.coal_honey_cell": "Coal Honey Cell",
+	"item.beenomey.gunpowder_honey_cell": "Gunpowder Honey Cell",
+	"item.beenomey.flint_honey_cell": "Flint Honey Cell",
+	"item.beenomey.slime_honey_cell": "Slime Honey Cell",
+	"item.beenomey.sugar_honey_cell": "Sugar Honey Cell",
+	"item.beenomey.glass_honey_cell": "Glass Honey Cell",
+	"item.beenomey.clay_honey_cell": "Clay Honey Cell",
+	"item.beenomey.string_honey_cell": "String Honey Cell",
+	"item.beenomey.nether_wart_honey_cell": "Nether Wart Honey Cell",
+	"item.beenomey.soul_sand_honey_cell": "Soul Sand Honey Cell",
+	"item.beenomey.mushroom_honey_cell": "Mushroom Honey Cell",
+	"item.beenomey.lava_honey_cell": "Lava Honey Cell",
+	"item.beenomey.lapis_lazuli_honey_cell": "Lapis Lazuli Honey Cell",
+	"item.beenomey.redstone_honey_cell": "Redstone Honey Cell",
+	"item.beenomey.iron_honey_cell": "Iron Honey Cell",
+	"item.beenomey.gold_honey_cell": "Gold Honey Cell",
+	"item.beenomey.copper_honey_cell": "Copper Honey Cell",
+	"item.beenomey.diamond_honey_cell": "Diamond Honey Cell",
+	"item.beenomey.obsidian_honey_cell": "Obsidian Honey Cell",
+	"item.beenomey.glowstone_honey_cell": "Glowstone Honey Cell",
+	"item.beenomey.blaze_honey_cell": "Blaze Honey Cell",
+	"item.beenomey.emerald_honey_cell": "Emerald Honey Cell",
+	"item.beenomey.nether_star_honey_cell": "Nether Star Honey Cell",
+	"item.beenomey.nether_quarz_honey_cell": "Nether Quarz Honey Cell",
+	"item.beenomey.prismarine_honey_cell": "Prismarine Honey Cell",
+	"item.beenomey.chorus_honey_cell": "Chorus Honey Cell",
+	"item.beenomey.netherite_honey_cell": "Netherite Honey Cell",
+	"item.beenomey.exp_honey_cell": "Exp Honey Cell",
+	"item.beenomey.ender_pearl_honey_cell": "Ender Pearl Honey Cell",
+	"item.beenomey.amethyst_honey_cell": "Amethyst Honey Cell",
 	
 	"block.beenomey.oakwood_beehive_block": "Oakwood Beehive",
 	"block.beenomey.birchwood_beehive_block": "Birchwood Beehive",
@@ -67,10 +97,43 @@
 	"beenomey.tooltip.liquid.amount.with.capacity": "%s / %s mB",
 	"beenomey.tooltip.liquid.amount": "%s mB",
 	
+	
 	"fluid_type.beenomey.honey_fluid": "Liquid Honey",
-	"fluid_type.beenomey.inferno_honey_fluid": "Liquid Hot Honey",
-	"fluid_type.beenomey.ocean_honey_fluid": "Liquid Watery Honey",
-	"fluid_type.beenomey.frozen_honey_fluid": "Liquid Icy Honey",
+	"fluid_type.beenomey.frozen_honey_fluid": "Liquid Frozen Honey",
+	"fluid_type.beenomey.desert_honey_fluid": "Liquid Desert oneycomb",
+	"fluid_type.beenomey.rock_honey_fluid": "Liquid Rock Honey",
+	"fluid_type.beenomey.inferno_honey_fluid": "Liquid Inferno Honey",
+	"fluid_type.beenomey.void_honey_fluid": "Liquid Void Honey",
+	"fluid_type.beenomey.coal_honey_fluid": "Liquid Coal Honey",
+	"fluid_type.beenomey.gunpowder_honey_fluid": "Liquid Gunpowder Honey",
+	"fluid_type.beenomey.flint_honey_fluid": "Liquid Flint Honey",
+	"fluid_type.beenomey.slime_honey_fluid": "Liquid Slime Honey",
+	"fluid_type.beenomey.sugar_honey_fluid": "Liquid Sugar Honey",
+	"fluid_type.beenomey.glass_honey_fluid": "Liquid Glass Honey",
+	"fluid_type.beenomey.clay_honey_fluid": "Liquid Clay Honey",
+	"fluid_type.beenomey.string_honey_fluid": "Liquid String Honey",
+	"fluid_type.beenomey.nether_wart_honey_fluid": "Liquid Nether Wart Honey",
+	"fluid_type.beenomey.soul_sand_honey_fluid": "Liquid Soul Sand Honey",
+	"fluid_type.beenomey.mushroom_honey_fluid": "Liquid Mushroom Honey",
+	"fluid_type.beenomey.lava_honey_fluid": "Liquid Lava Honey",
+	"fluid_type.beenomey.lapis_lazuli_honey_fluid": "Liquid Lapis Lazuli Honey",
+	"fluid_type.beenomey.redstone_honey_fluid": "Liquid Redstone Honey",
+	"fluid_type.beenomey.iron_honey_fluid": "Liquid Iron Honey",
+	"fluid_type.beenomey.gold_honey_fluid": "Liquid Gold Honey",
+	"fluid_type.beenomey.copper_honey_fluid": "Liquid Copper Honey",
+	"fluid_type.beenomey.diamond_honey_fluid": "Liquid Diamond Honey",
+	"fluid_type.beenomey.obsidian_honey_fluid": "Liquid Obsidian Honey",
+	"fluid_type.beenomey.glowstone_honey_fluid": "Liquid Glowstone Honey",
+	"fluid_type.beenomey.blaze_honey_fluid": "Liquid Blaze Honey",
+	"fluid_type.beenomey.emerald_honey_fluid": "Liquid Emerald Honey",
+	"fluid_type.beenomey.nether_star_honey_fluid": "Liquid Nether Star Honey",
+	"fluid_type.beenomey.nether_quarz_honey_fluid": "Liquid Nether Quarz Honey",
+	"fluid_type.beenomey.prismarine_honey_fluid": "Liquid Prismarine Honey",
+	"fluid_type.beenomey.chorus_honey_fluid": "Liquid Chorus Honey",
+	"fluid_type.beenomey.netherite_honey_fluid": "Liquid Netherite Honey",
+	"fluid_type.beenomey.exp_honey_fluid": "Liquid Exp Honey",
+	"fluid_type.beenomey.ender_pearl_honey_fluid": "Liquid Ender Pearl Honey",
+	"fluid_type.beenomey.amethyst_honey_fluid": "Liquid Amethyst Honey",
 	
 	"creativemodetab.beenomey_tab": "Beenome Y"
 }
